# claude-node

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
claude_node/: __init__.py  controller.py  exceptions.py  router.py  runtime.py
docs/: 00-index.md  01-positioning.md  02-architecture.md  03-api-reference.md  04-protocol.md  05-development.md  06-roadmap-and-limitations.md
examples/: README.md  demo_cli_native_features.py  demo_end_to_end.py  demo_protocol_trace.py
tests/: conftest.py
tests/integration/: test_a2a_interactive.py  test_advanced.py  test_brainstorm_full.py  test_handshake.py  test_multiturn.py  test_nested.py  test_print_stream.py  test_raw.py  test_skill_interactive.py  test_stream.py  test_two_agents.py
tests/unit/: conftest.py  test_controller_core.py  test_exceptions_and_exports.py  test_helpers.py  test_message_model.py  test_router.py  test_runtime_module.py
